# directors-swig

./: .gitignore  CMakeLists.txt  CSharpDerived.cs  Example.csproj  Implementation.cs  README.md  example.h  example.i  main.cpp  swig.sh
